metadata/unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Individual Opportunity</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deposit Made</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Needs Information</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Negotiation Rejected</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>RB Robotics Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Approval</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depth__c</fullName>
        <formula>if((IsBlank(Parent_Opportunity__c)),0,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__c), 1,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 2,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 3,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 4,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 5,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 6,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 7,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 8,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), 9,
10))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hierarchy_ID__c</fullName>
        <formula>if((IsBlank(Parent_Opportunity__c)), Id ,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__c), Id+&apos;;&apos;+Parent_Opportunity__r.Id,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c),Id+&apos;;&apos;+Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Id,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), Id+&apos;;&apos;+Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), Id+&apos;;&apos;+Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c),Id+&apos;;&apos;+Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+ Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c),Id+&apos;;&apos;+Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+ Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+ Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id,
if(IsBlank(Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__c), Id+&apos;;&apos;+Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+ Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+ Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id+&apos;;&apos;+Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Parent_Opportunity__r.Id,
&apos;&apos;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Values__c</fullName>
        <label>Roll Up Values</label>
        <summarizedField>Opportunity_Product_Custom__c.Total_Amount__c</summarizedField>
        <summaryForeignKey>Opportunity_Product_Custom__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Value__c</fullName>
        <label>Total Quote Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Individual_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Individual Opportunity</businessProcess>
        <label>Individual Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>RB_Robotics_Process_RT</fullName>
        <active>true</active>
        <businessProcess>RB Robotics Sales Process</businessProcess>
        <label>RB Robotics Process RT</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Oppourtunites_not_to_be_saved</fullName>
        <active>true</active>
        <description>Oppourtunites not to be saved</description>
        <errorConditionFormula>IF(And( (ISPICKVAL(StageName, &apos;Contract Signed&apos;)),(ISPICKVAL(status__c, &apos;Pending&apos;)) ), true, false)</errorConditionFormula>
        <errorMessage>Cannot save the record as the status is still pending</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requirements_for_opportunities</fullName>
        <active>true</active>
        <errorConditionFormula>AND(   ISPICKVAL( StageName , &apos;Closed Won&apos;),Approved__c==false, Amount &gt;100000)</errorConditionFormula>
        <errorMessage>Not edir</errorMessage>
    </validationRules>
</CustomObject>